css fix bug extra space because of the search

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -101,6 +101,7 @@ ol.breadcrumb {
     }
     .twitter-typeahead {
       width: 100%;
+      padding-right: 26px;
       input {
         width: 100%;
         margin-left: 34px;
